# snake_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  snake_test.yml
src/: error.rs  food.rs  game.rs  main.rs  snake.rs  ui.rs
src/game/: game_action.rs
src/ui/: dimensions.rs  dynamicui.rs  staticui.rs  ui_items.rs
