[package]
name = "snake"
version = "1.1.3"
edition = "2021"
authors = [ "Ghost17" ]
description = "CLI Snake game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"

[profile.release]
opt-level = 3
strip = true
lto = "thin"
