[package]
name = "snake"
version = "1.1.4"
edition = "2021"
authors = [ "Ghost17" ]
description = "CLI Snake game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
rand = "*"

[profile.release]
opt-level = 3
strip = true
lto = "thin"
